--- a/styleform.css
+++ b/styleform.css
@@ -19,30 +19,35 @@ fieldset{
     width: 300px;
     height: 70px;
     display: flex;
-    justify-content: flex-start;
     color: #e5e5e5;
-    justify-content: space-between;
 }
 
-box {
+
+#main {
     background: rgba(255, 255, 255, 0.3);
     font-family: sans-serif;
     font-size: 1em;
     width: 50%;
     height: 500px;
-    padding: 15px;
+    padding: 25px;
     border: 5px black;
     border-radius: 5px;
     margin-left: 35px;
-    margin-top: 70px;
+    margin-top: 30px;
+    display: flex;
     justify-content: center;
-    position: absolute;
+    align-items: center;
+    flex-direction: column;
+
 }
 
 fieldset .campo .grupo {
-    float: left;
-    margin-left: 1em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 1rem 0;
 }
+
 
 
 input, select, textarea, button{
@@ -50,17 +55,17 @@ input, select, textarea, button{
 }
 
 .campo{
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 }
 
 .campo label{
-    margin-bottom: 0.2em;
+    margin-bottom: 0.3em;
     color: #090d0e;
     display: block;
 }
 
 .campo input[type=text], .campo input[type=email], .campo select, .campo textarea{
-    padding: 0.2em;
+    padding: 0.3em;
     border: 1px solid #090d0e;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     display: block;
@@ -89,13 +94,14 @@ input, select, textarea, button{
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 90%;
-    left: 50%;
+    left: 70%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
 }
 
 .botao:hover{
     background: #e5e5e5;
+    color: #090d0e;
     box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.2);
     text-shadow: none;
 }
