--- a/styletabela.css
+++ b/styletabela.css
@@ -1,107 +1,41 @@
-
-#titulo{
-    font-family: sans-serif;
-    color: #e5e5e5;
-    text-align: center;
-    font-size: 30px;
-
-}
-
-#subtitulo{
-    font-family: sans-serif;
-    color: #e5e5e5;
-    text-align: center;
-    font-size: 20px;
-}
-
-fieldset{
-    border: 0;
-    width: 300px;
-    height: 70px;
-    display: flex;
-    color: #e5e5e5;
-}
-
-
-#main {
+.tabela{
     background: rgba(255, 255, 255, 0.3);
-    font-family: sans-serif;
-    font-size: 1em;
-    width: 50%;
-    height: 50%;
-    padding: 25px;
-    border: 5px black;
     border-radius: 5px;
-    margin-left: 35px;
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-}
-
-fieldset .campo .grupo {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 1rem 0;
-}
-
-
-
-input, select, textarea, button{
-    border-radius: 5px;
-}
-
-.campo{
-    margin-bottom: 2em;
-}
-
-.campo label{
-    margin-bottom: 0.3em;
-    color: #090d0e;
-    display: block;
-}
-
-.campo input[type=text], .campo input[type=email], .campo select, .campo textarea{
-    padding: 0.3em;
-    border: 1px solid #090d0e;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-    display: block;
-}
-
-.campo input[radio]{
-    display: flex;
-}
-
-.campo select option{
-    padding-right: 1em;
-}
-
-.campo input:focus, .campo select:focus, .campo textarea:focus{
-    background: #e5e5e5;
-}
-
-.botao{
-    font-size: 1.2em;
-    background: rgb(223, 226, 39);
-    border: 0;
-    margin-bottom: 1em;
+    margin-top: 100px;
+    width: 90%;
+    height: 600px;
     color: black;
-    padding: 0.2em 0.6em;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-    position: absolute;
-    top: 90%;
-    left: 70%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
 
-.botao:hover{
-    background: #e5e5e5;
-    color: #090d0e;
-    box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.2);
-    text-shadow: none;
+.titulotabela{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
 }
+
+
+table{
+    border-collapse: collapse;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+
+table th{
+    background-color: rgb(223, 226, 39);
+}
+
+table th, td{
+    padding: 1px 5px;
+    text-align: left;
+}
+
+table td img{
+    width: 15px;
+    align-items: center;
+}
+.center{
+    text-align: center;
+ }
