--- a/styleform.css
+++ b/styleform.css
@@ -28,7 +28,7 @@ fieldset{
     font-family: sans-serif;
     font-size: 1em;
     width: 50%;
-    height: 50%;
+    height: 500px;
     padding: 25px;
     border: 5px black;
     border-radius: 5px;
