--- a/styleform.css
+++ b/styleform.css
@@ -27,7 +27,7 @@ fieldset{
     background: rgba(255, 255, 255, 0.3);
     font-family: sans-serif;
     font-size: 1em;
-    width: 50%;
+    min-width: 50%;
     height: 600px;
     padding: 25px;
     border: 5px black;
