--- a/styleform.css
+++ b/styleform.css
@@ -73,6 +73,7 @@ input, select, textarea, button{
 
 .campo input[radio]{
     display: flex;
+    accent-color:#e5e5e5;
 }
 
 .campo select option{
