--- a/styleform.css
+++ b/styleform.css
@@ -28,7 +28,7 @@ fieldset{
     font-family: sans-serif;
     font-size: 1em;
     min-width: 50%;
-    height: 600px;
+    height: 50%;
     padding: 25px;
     border: 5px black;
     border-radius: 5px;
@@ -38,6 +38,7 @@ fieldset{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+   gap: 1rem;
 
 }
 
@@ -46,11 +47,12 @@ fieldset .campo .grupo {
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 1rem 0;
+
 }
 
 
 
-input, select, textarea, button{
+input, select, button{
     border-radius: 5px;
 }
 
@@ -64,23 +66,27 @@ input, select, textarea, button{
     display: block;
 }
 
-.campo input[type=text], .campo input[type=email], .campo select, .campo textarea{
-    padding: 0.3em;
+.campo input[type=text], .campo input[type=email], .campo select{
+    padding: 7px 5px;
+    outline: none;
     border: 1px solid #090d0e;
+    box-sizing: border-box;
+    background-color: azure;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     display: block;
 }
 
 .campo input[radio]{
     display: flex;
-    accent-color:#e5e5e5;
+    accent-color: rgb(223, 226, 39);
 }
 
 .campo select option{
     padding-right: 1em;
+    accent-color: rgb(223, 226, 39);
 }
 
-.campo input:focus, .campo select:focus, .campo textarea:focus{
+.campo input:focus, .campo select:focus{
     background: #e5e5e5;
 }
 
@@ -105,4 +111,13 @@ input, select, textarea, button{
     color: #090d0e;
     box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.2);
     text-shadow: none;
+}
+
+.span-required{
+    font-size: 13px;
+    margin: 3px 0 0 1px;
+    color: rgb(240, 30, 30);
+    display: none;
+    
+
 }
